removed unused references
Former-commit-id: 176b525e1245621bd993858afe05948ddd32fa83

--- a/Client/Restaurant.Client/Restaurant/Pages/BasketPage.xaml
+++ b/Client/Restaurant.Client/Restaurant/Pages/BasketPage.xaml
@@ -1,12 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <local:BasketPageXaml xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ignorable="d"
              x:Class="Restaurant.Pages.BasketPage"
              xmlns:local="clr-namespace:Restaurant.Pages;assembly=Restaurant"
-             xmlns:controls="clr-namespace:Restaurant.Controls;assembly=Restaurant"
              xmlns:imagecontrol="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin.Abstractions"
              xmlns:views="clr-namespace:Restaurant.Views;assembly=Restaurant"
-             BackgroundColor="{StaticResource WindowBackground}">
+             xmlns:viewModels="clr-namespace:Restaurant.ViewModels;assembly=Restaurant"
+             BackgroundColor="{StaticResource WindowBackground}"
+             d:DataContext="{d:DesignInstance viewModels:BasketViewModel}">
 
   <local:BasketPageXaml.Content>
     <Grid>
