--- a/Client/Restaurant.Client/Restaurant/Pages/Android/MenuPage.xaml
+++ b/Client/Restaurant.Client/Restaurant/Pages/Android/MenuPage.xaml
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:Restaurant.Controls;assembly=Restaurant"
-             x:Class="Restaurant.Pages.Android.MenuPage">
-  <ContentView.Content>
+             x:Class="Restaurant.Pages.Android.MenuPage"
+             Title="Restaurant">
+    <ContentPage.Content>
         <controls:NavigationView />
-  </ContentView.Content>
-</ContentView>
+    </ContentPage.Content>
+</ContentPage>
