--- a/Client/Restaurant.Client/Restaurant/Pages/FoodsPage.xaml
+++ b/Client/Restaurant.Client/Restaurant/Pages/FoodsPage.xaml
@@ -2,17 +2,19 @@
 
 <local:FoodsXamlPage xmlns="http://xamarin.com/schemas/2014/forms"
                      xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                      x:Class="Restaurant.Pages.FoodsPage"
                      xmlns:local="clr-namespace:Restaurant.Pages;assembly=Restaurant"
                      xmlns:views="clr-namespace:Restaurant.Views;assembly=Restaurant"
                      xmlns:converters="clr-namespace:Restaurant.Converters;assembly=Restaurant"
                      xmlns:controls="clr-namespace:Restaurant.Controls;assembly=Restaurant"
                      xmlns:viewModels="clr-namespace:Restaurant.ViewModels;assembly=Restaurant"
-                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                     mc:Ignorable="d"
                      BackgroundColor="{StaticResource WindowBackgroundTable}"
-                     d:DataContext="{d:DesignInstance viewModels:FoodsViewModel}">
+                     mc:Ignorable="d"
+                     d:DataContext="{d:DesignInstance viewModels:FoodsViewModel}"
+                     Icon="ic_restaurant_menu_black.png"
+                     Title="Foods">
 
     <local:FoodsPage.Resources>
         <ResourceDictionary>
@@ -21,7 +23,11 @@
     </local:FoodsPage.Resources>
 
     <local:FoodsXamlPage.ToolbarItems>
-        <controls:BadgeToolbarItem Icon="ic_shopping_cart_white" BadgeText="{Binding BasketViewModel.OrdersCount}" BadgeColor="{StaticResource badgeColor}" BadgePressedColor="{StaticResource badgeColor}"/>
+        <controls:BadgeToolbarItem Icon="ic_shopping_cart_white" 
+                                   Command="{Binding GoToBasket}"
+                                   BadgeText="{Binding BasketViewModel.OrdersCount}" 
+                                   BadgeColor="{StaticResource badgeColor}" 
+                                   BadgePressedColor="{StaticResource badgeColor}"/>
     </local:FoodsXamlPage.ToolbarItems>
 
     <local:FoodsXamlPage.Content>
