--- a/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/Welcome/SignUpPage.xaml
+++ b/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/Welcome/SignUpPage.xaml
@@ -1,13 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
-<welcome1:SignUpPageXaml xmlns="http://xamarin.com/schemas/2014/forms"
+<welcome:SignUpPageXaml xmlns="http://xamarin.com/schemas/2014/forms"
                         xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                        xmlns:welcome="clr-namespace:Restaurant.Xamarin.UI.Pages.Welcome"
-                        xmlns:controls="clr-namespace:Restaurant.Xamarin.UI.Controls"
-                        xmlns:welcome1="clr-namespace:Restaurant.Mobile.UI.Pages.Welcome;assembly=Restaurant.Mobile.UI"
-                        xmlns:controls1="clr-namespace:Restaurant.Mobile.UI.Controls;assembly=Restaurant.Mobile.UI"
+                        xmlns:welcome="clr-namespace:Restaurant.Mobile.UI.Pages.Welcome"
+                        xmlns:controls="clr-namespace:Restaurant.Mobile.UI.Controls"
                         x:Class="Restaurant.Mobile.UI.Pages.Welcome.SignUpPage">
-    <welcome1:SignUpPageXaml.Content>
+    <welcome:SignUpPageXaml.Content>
         <StackLayout VerticalOptions="Center" Padding="25">
             <StackLayout Orientation="Vertical" x:Name="regesterStack">
 
@@ -20,18 +18,18 @@
                         <Image Source="ic_account.png" HeightRequest="25" Grid.Column="0" WidthRequest="25"
                                VerticalOptions="Center" />
 
-                        <controls1:RestaurantEntry x:Name="RegesterName" Text="{Binding UserName}"
+                        <controls:RestaurantEntry x:Name="RegesterName" Text="{Binding UserName}"
                                                   Placeholder="User name"
                                                   Grid.Column="1" VerticalOptions="Center"
                                                   HorizontalOptions="FillAndExpand" HasBorder="False" />
                     </Grid>
                     <ContentView BackgroundColor="{StaticResource indigoPrimary}" HorizontalOptions="Fill">
-                        <!--<ContentView.HeightRequest>
-                            <OnPlatform x:TypeArguments="x:Double">
+                        <ContentView.HeightRequest>
+                            <!--<OnPlatform x:TypeArguments="x:Double">
                                 <On Platform="Android">0</On>
                                 <On Platform="iOS">1</On>
-                            </OnPlatform>
-                        </ContentView.HeightRequest>-->
+                            </OnPlatform>-->
+                        </ContentView.HeightRequest>
                     </ContentView>
                 </StackLayout>
 
@@ -44,18 +42,10 @@
                         <Image Source="ic_email.png" HeightRequest="25" Grid.Column="0" WidthRequest="25"
                                VerticalOptions="Center" />
 
-                        <controls1:RestaurantEntry x:Name="RegesterEmail" Text="{Binding Email}" Placeholder="Email"
+                        <controls:RestaurantEntry x:Name="RegesterEmail" Text="{Binding Email}" Placeholder="Email"
                                                   Grid.Column="1" VerticalOptions="Center"
                                                   HorizontalOptions="FillAndExpand" HasBorder="False" />
                     </Grid>
-                    <ContentView BackgroundColor="{StaticResource indigoPrimary}" HorizontalOptions="Fill">
-                        <!--<ContentView.HeightRequest>
-                            <OnPlatform x:TypeArguments="x:Double">
-                                <On Platform="Android">0</On>
-                                <On Platform="iOS">1</On>
-                            </OnPlatform>
-                        </ContentView.HeightRequest>-->
-                    </ContentView>
                 </StackLayout>
 
                 <StackLayout Orientation="Vertical" Padding="15">
@@ -66,23 +56,16 @@
                         </Grid.ColumnDefinitions>
                         <Image Source="ic_key_variant.png" Grid.Column="0" WidthRequest="25" HeightRequest="25"
                                VerticalOptions="Center" />
-                        <controls1:RestaurantEntry HasBorder="False" x:Name="RegesterPassword" Placeholder="Password"
+                        <controls:RestaurantEntry HasBorder="False" x:Name="RegesterPassword" Placeholder="Password"
                                                   Grid.Column="1"
                                                   HorizontalOptions="FillAndExpand" IsPassword="true"
                                                   Text="{Binding Password}" />
                     </Grid>
-                    <ContentView BackgroundColor="{StaticResource indigoPrimary}" HorizontalOptions="Fill">
-                        <!--<ContentView.HeightRequest>
-                            <OnPlatform x:TypeArguments="x:Double">
-                                <On Platform="Android">0</On>
-                                <On Platform="iOS">1</On>
-                            </OnPlatform>
-                        </ContentView.HeightRequest>-->
-                    </ContentView>
+                  
                 </StackLayout>
 
                 <StackLayout Padding="15">
-                    <controls1:AnimateButton x:Name="Regester" Text="Sign Up" Command="{Binding Regester}"
+                    <controls:AnimateButton x:Name="Regester" Text="Sign Up" Command="{Binding Regester}"
                                             WidthRequest="300" HorizontalOptions="Center" />
                 </StackLayout>
             </StackLayout>
@@ -92,5 +75,5 @@
                 <ActivityIndicator VerticalOptions="Center" IsRunning="{Binding IsLoading}" />
             </StackLayout>
         </StackLayout>
-    </welcome1:SignUpPageXaml.Content>
-</welcome1:SignUpPageXaml>
+    </welcome:SignUpPageXaml.Content>
+</welcome:SignUpPageXaml>
