ios UX changes after upading packages
Former-commit-id: 1a768434a61eb39e2a6cb1e5ffbe98fd346e339d
Former-commit-id: 0e2d1b7b5d82a825cc3b247c7565031db1b9dee9 [formerly aef75a51df3225b1f0d1d806dd4bfd4915a29f25]
Former-commit-id: 93a39100c8bccaa4fc2b3b800c652829362b75b7

--- a/Client/Restaurant.Client/Restaurant.Mobile.UI/Controls/HeaderDivider.xaml
+++ b/Client/Restaurant.Client/Restaurant.Mobile.UI/Controls/HeaderDivider.xaml
@@ -5,11 +5,11 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="Restaurant.Mobile.UI.Controls.HeaderDivider">
     <ContentView.Content>
-        <!--<BoxView
+        <BoxView
             HorizontalOptions="FillAndExpand" BackgroundColor="{DynamicResource Divider}">
             <BoxView.HeightRequest>
                 <OnPlatform x:TypeArguments="x:Double" iOS="0" Android="1" WinPhone="1" />
             </BoxView.HeightRequest>
-        </BoxView>-->
+        </BoxView>
     </ContentView.Content>
 </ContentView>
