--- a/Client/Restaurant.Client/Restaurant.Mobile.UI/App.xaml
+++ b/Client/Restaurant.Client/Restaurant.Mobile.UI/App.xaml
@@ -8,7 +8,7 @@
     <Application.Resources>
         <ResourceDictionary>
 
-            <OnPlatform x:TypeArguments="Thickness" Android="12,8" iOS="10" WinPhone="0,0,0,16" x:Key="CardPadding" />
+            <OnPlatform x:TypeArguments="Thickness" Android="12,8" iOS="0, 10, 18, 10" WinPhone="0,0,0,16" x:Key="CardPadding" />
 
             <OnPlatform x:TypeArguments="Thickness" Android="15" iOS="15" WinPhone="20" x:Key="FoodDetailtPadding" />
 
