--- a/Client/Restaurant.Client/Restaurant.Mobile.UI/Controls/FooterDivider.xaml
+++ b/Client/Restaurant.Client/Restaurant.Mobile.UI/Controls/FooterDivider.xaml
@@ -6,12 +6,12 @@
     <ContentView.Content>
         <BoxView HorizontalOptions="FillAndExpand"
             BackgroundColor="{DynamicResource Divider}">
-            <!--<BoxView.HeightRequest>
+            <BoxView.HeightRequest>
                 <OnPlatform x:TypeArguments="x:Double">
                     <On Platform="Android">0</On>
                     <On Platform="iOS">0.3</On>
                 </OnPlatform>
-            </BoxView.HeightRequest>-->
+            </BoxView.HeightRequest>
         </BoxView>
     </ContentView.Content>
 </ContentView>
