--- a/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/FoodDetailPage.xaml
+++ b/Client/Restaurant.Client/Restaurant.Mobile.UI/Pages/FoodDetailPage.xaml
@@ -93,19 +93,18 @@
                 VerticalOptions="EndAndExpand"
                 Text="Add to card" />
 
-        <!--<controls:FloatingActionButton AbsoluteLayout.LayoutBounds=".9, .5, 50, 50"
+        <controls:FloatingActionButton AbsoluteLayout.LayoutBounds=".9, .5, 50, 50"
                                        AbsoluteLayout.LayoutFlags="PositionProportional"
                                        RippleColor="{StaticResource primaryColorLight}"
                                        Image="ic_heart_outline_white_24dp.png">
-            -->
-        <!--<controls:FloatingActionButton.IsVisible>
+
+            <!--<controls:FloatingActionButton.IsVisible>
                 <OnPlatform x:TypeArguments="x:Boolean">
                     <On Platform="Android" Value="True" />
                     <On Platform="iOS" Value="False" />
                     <On Platform="Uwp" Value="False" />
                 </OnPlatform>
             </controls:FloatingActionButton.IsVisible>-->
-        <!--
-        </controls:FloatingActionButton>-->
+        </controls:FloatingActionButton>
     </AbsoluteLayout>
 </pages:FoodDetailPageXaml>
